--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,12 @@ dependencies {
     //Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
+    //Navigation
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
 }
 
 kapt {
