--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,15 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.9"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
+    //room
+    implementation "androidx.room:room-runtime:2.4.3"
+    implementation 'androidx.room:room-ktx:2.4.3'
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+
+    //pull to refresh
+    implementation 'com.google.accompanist:accompanist-swiperefresh:0.27.0'
+
 
 }
 
