--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,10 @@ dependencies {
     //pull to refresh
     implementation 'com.google.accompanist:accompanist-swiperefresh:0.27.0'
 
+    //image loading
+    implementation("io.coil-kt:coil-compose:2.2.2")
+
+
 
 }
 
